--- a/JukeBox/public/css/app.css
+++ b/JukeBox/public/css/app.css
@@ -755,6 +755,9 @@ select {
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+.mt-16 {
+  margin-top: 4rem;
+}
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -860,9 +863,6 @@ select {
 .w-8 {
   width: 2rem;
 }
-.w-64 {
-  width: 16rem;
-}
 .min-w-full {
   min-width: 100%;
 }
@@ -883,6 +883,9 @@ select {
 }
 .shrink-0 {
   flex-shrink: 0;
+}
+.table-auto {
+  table-layout: auto;
 }
 .origin-top-left {
   transform-origin: top left;
@@ -1154,33 +1157,33 @@ select {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
 }
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .font-medium {
   font-weight: 500;
+}
+.font-bold {
+  font-weight: 700;
 }
 .font-light {
   font-weight: 300;
 }
 .font-semibold {
   font-weight: 600;
-}
-.font-bold {
-  font-weight: 700;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1369,6 +1372,10 @@ select {
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.hover\:text-yellow-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 .hover\:text-blue-400:hover {
   --tw-text-opacity: 1;
